--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 </tr>
                 <tr>
                     <td><label class="form-styles" for="gender-male">Стать:</label></td>
-                    <td>
+                    <td class="gap-gender">
                         <label for="gender-male" class="gendes">
                             <input class="male" id="gender-male" type="radio" name="gender"> Чоловік
                         </label>
@@ -210,8 +210,8 @@
                                     <label for=""><input type="text" id="poshta-index"></label>
                                 </td>
                             </tr>
-                            <tr>
-                                <td colspan="3"><label class="rules" for=""><input type="checkbox">Я погоджуюсь з
+                            <tr class="accept-poslogi">
+                                <td colspan="3"><label class="rules" for="accepts"><input type="checkbox" id="accepts">Я погоджуюсь з
                                         правилами оплати та доставки товару</label></td>
                             </tr>
                             <tr>
