--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     </div>
                     <div class="date">
                         <p class="date-status">Дата</p>
-                        <label for="date">
+                        <label for="date" class="daters">
                           <input type="date" id="date">
                         </label>
                       </div>
