--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
         </main>
         <hr>
         <footer>
+            
             <div class="form-table-info">
                 <div class="form-info">
                     <h2>05. форма таблицею</h2>
@@ -172,7 +173,7 @@
                         <table>
                             <tr class="contacts">
                                 <td><label for="contacts">Прізвище та ім’я</label>
-                                    <label for=""><input class="contacts" id="contacts" type="text"></label>
+                                    <label for=""><input class="contacts pad" id="contacts" type="text"></label>
                                 </td>
                                 <td><label for="mail">Ел. пошта</label>
                                     <label for=""><input class="contacts" type="text" id="mail"></label>
@@ -201,7 +202,7 @@
                             </tr>
                             <tr>
                                 <td><label for="city">Місто</label>
-                                    <label for=""><input type="text" id="city"></label>
+                                    <label for=""><input type="text" class="pad" id="city"></label>
                                 </td>
                                 <td><label for="citys">Місто</label>
                                     <label for=""><input type="text" id="citys"></label>
