--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
                 </tr>
                 <tr>
                     <td>
-                        <label class="form-styles" for="city">Місто:</label>
+                        <label class="form-styles" for="cityr">Місто:</label>
                     </td>
-                    <td> <label for="" class="arrows">
-                            <select>
+                    <td> <label for="cityr" class="arrows" id="">
+                            <select id="cityr">
                                 <option>Хмельницький</option>
                             </select>
                         </label>
@@ -151,7 +151,7 @@
                     <td><input type="file" id="foto" name=""><label for="foto" class="filer">Виберіть файл</label></td>
                 </tr>
                 <tr>
-                    <td style="vertical-align: top;"><label class="form-styles" for="comment">Коментарій:</label></td>
+                    <td style="vertical-align: top; padding-right: 10px;"><label class="form-styles" for="comment">Коментарій:</label></td>
                     <td><textarea name="textarea" class="message" id="comment" cols="40" rows="10"
                             placeholder="Введіть текст повідомлення"></textarea></td>
                 </tr>
@@ -204,7 +204,7 @@
                                 <td><label for="city">Місто</label>
                                     <label for=""><input type="text" class="pad" id="city"></label>
                                 </td>
-                                <td><label for="citys">Місто</label>
+                                <td><label for="citys">Будинок</label>
                                     <label for=""><input type="text" id="citys"></label>
                                 </td>
                                 <td><label for="poshta-index">Поштовий індекс</label>
